nieyraud_services/srcs/kustomization/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-wp-svc
  labels:
    app: mysql-wp-svc
spec:
  clusterIP: None
  ports:
  - port: 3306
    protocol: TCP
  selector:
    app: mysql8
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-dpl
  labels:
    app: mysql-dpl
spec:
  selector:
    matchLabels:
      app: mysql-wp-dpl
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-wp-dpl
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
