nieyraud_services/srcs/kustomization/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  labels:
    run: wordpress-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
  selector:
    app: wordpress
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-dpl
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: appsvcorg/wordpress-alpine-php
        name: wordpress
        ports:
        - containerPort: 5050
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
